-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 150801) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.1 *-

??082001 (v2.0.2)  -** stable release **-
 	- added: current position tracking to loop devices
	- added: more verbose xrun info from ALSA 0.9.x devices
	- added: info about the new perl bindings to ECI API docs
	- added: Eric Tiedemann's alternative Python ECI 
		 interface, eci.py, added to pyecasound [est]
	- added: support for gcc 3.0 [juekawa]
	- changed: improved configure checks for python include 
		   and library directories
	- changed: -tl now works without -t
	- changed: new algorithm for selecting initial param 
		   values for LADSPA plugins
	- changed: update ogg input and output support to
		   work with ogg vorbis 1.0rc2
	- fixed: selecting a non-existant chainsetup could crash 
		 ecasound
	- fixed: --enable-audiofile actually disabled the use of 
		 libaudiofile (!)
	- fixed: ecaplay - if ecaplay is unable to play a file, 
		 instead of exiting it now skips to the next file
	- fixed: giving a non-integer number of delays to -etd 
		 caused  a seg.fault
	- fixed: eiam - issuing copp-select + copp-get caused
		 a crash if no cop was selected
	- fixed: bugs in handling infinite length ewf sources
	- fixed: --disable-oss still required to sys/soundcard.h 
	         to be present [rob]