@@ -1,4 +1,4 @@
-.TH "ecasound" "1" "25\&.04\&.2001" "" "Multimedia software" 
+.TH "ecasound" "1" "24\&.06\&.2001" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasound \- sample editor, multitrack recorder, fx-processor, etc\&.
@@ -370,7 +370,7 @@ optimal value\&.
 .PP 
 \fIENVELOPE MODULATION\fP
 .IP 
-.IP "-eemb:bpm,on-time-msec" 
+.IP "-eemb:bpm,on-time-%" 
 Pulse gate (pulse frequency given as beats-per-minute)\&.
 .IP 
 .IP "-eemp:freq-Hz,on-time-%" 
