@@ -23,7 +23,7 @@
 <hr>
 
 <h1>ecasound</h1>
-<h2>25.04.2001</h2>
+<h2>24.06.2001</h2>
 
 
     
@@ -346,7 +346,7 @@ optimal value.
 <p></dl>
 <p><em>ENVELOPE MODULATION</em>
 <dl>
-<p><p></p><dt><strong>-eemb:bpm,on-time-msec</strong><dd>
+<p><p></p><dt><strong>-eemb:bpm,on-time-%</strong><dd>
 Pulse gate (pulse frequency given as beats-per-minute).
 <p><p></p><dt><strong>-eemp:freq-Hz,on-time-%</strong><dd>
 Pulse gate.
